--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,23 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  amap_map_fluttify: ^0.25.0
+  camera_camera: ^1.0.34+1
+  camera: ^0.5.8+2
+  flutter_tencent_ocr: ^0.1.2
+  amap_location: ^0.2.0
+  easy_alert: ^0.0.8
+  image_picker: ^0.6.3+4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  shared_preferences: ^0.5.8
+  cupertino_icons: ^0.1.2
+  shared_preferences: "^0.4.2"
+  permission_handler: ^3.2.0
+  provider: ^4.0.4
+  fluttertoast: ^3.1.3
+  flutter_secure_storage: ^3.3.3
   date_format: ^1.0.8
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
