--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   fluttertoast: ^3.1.3
   flutter_secure_storage: ^3.3.3
   date_format: ^1.0.8
+  flutter_drag_scale:
+    git: https://github.com/LiuC520/flutter_drag_scale.git
 
 dev_dependencies:
   flutter_test:
