--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  amap_map_fluttify: ^0.25.0
+  r_logger: ^0.2.0
+  amap_map_fluttify: ^0.25.1
+  amap_core_fluttify: ^0.9.5
+  amap_search_fluttify: ^0.11.0
   camera_camera: ^1.0.34+1
-  camera: ^0.5.8+2
+  camera: ^0.5.8+5
   flutter_tencent_ocr: ^0.1.2
   amap_location: ^0.2.0
   easy_alert: ^0.0.8
@@ -34,12 +36,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  shared_preferences: "^0.4.2"
-  permission_handler: ^3.2.0
+  shared_preferences: ^0.5.10
   provider: ^4.0.4
   fluttertoast: ^3.1.3
+  excel: ^1.1.5
+  permission_handler: ^5.0.1+1
   flutter_secure_storage: ^3.3.3
   date_format: ^1.0.8
+  file_picker: ^2.0.0
   flutter_drag_scale:
     git: https://github.com/LiuC520/flutter_drag_scale.git
 
