--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,15 @@ dependencies:
   flutter:
     sdk: flutter
   r_logger: ^0.2.0
-  amap_map_fluttify: ^0.25.1
-  amap_core_fluttify: ^0.9.5
-  amap_search_fluttify: ^0.11.0
+  amap_all_fluttify: ^0.17.0
+  #amap_map_fluttify: ^0.25.1
+  #amap_core_fluttify: ^0.9.5
+  #amap_search_fluttify: ^0.11.0
+  #amap_location: ^0.2.0
   camera_camera: ^1.0.34+1
   camera: ^0.5.8+5
   flutter_tencent_ocr: ^0.1.2
-  amap_location: ^0.2.0
+
   easy_alert: ^0.0.8
   image_picker: ^0.6.3+4
   # The following adds the Cupertino Icons font to your application.
