--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.10
+  event_bus: ^1.1.1
   provider: ^4.0.4
   fluttertoast: ^3.1.3
   excel: ^1.1.5
