--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
   r_logger: ^0.2.0
-  amap_all_fluttify: ^0.17.0
-  #amap_map_fluttify: ^0.25.1
-  #amap_core_fluttify: ^0.9.5
-  #amap_search_fluttify: ^0.11.0
-  #amap_location: ^0.2.0
+  #amap_all_fluttify: ^0.17.0
+  amap_search_fluttify: ^0.14.0
+  amap_location_fluttify: ^0.17.0
+  amap_map_fluttify: ^0.27.0
   camera_camera: ^1.0.34+1
   camera: ^0.5.8+5
   flutter_tencent_ocr: ^0.1.2
@@ -40,6 +39,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.10
   event_bus: ^1.1.1
+  flutter_screenutil: ^3.1.1
   provider: ^4.0.4
   fluttertoast: ^3.1.3
   excel: ^1.1.5
