--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,17 +26,20 @@ dependencies:
   r_logger: ^0.2.0
   #amap_all_fluttify: ^0.17.0
   amap_search_fluttify: ^0.14.0
-  amap_location_fluttify: ^0.17.0
-  amap_map_fluttify: ^0.27.0
+  amap_location_fluttify: ^0.18.0
+  amap_map_fluttify: ^0.29.0
   camera_camera: ^1.0.34+1
   camera: ^0.5.8+5
   flutter_tencent_ocr: ^0.1.2
+  leancloud_storage: ^0.5.0
+  device_info: ^0.4.2+8
 
   easy_alert: ^0.0.8
   image_picker: ^0.6.3+4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  dio: ^3.0.10
   shared_preferences: ^0.5.10
   event_bus: ^1.1.1
   flutter_screenutil: ^3.1.1
