--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:icon="@drawable/manager"
+        android:icon="@mipmap/manager"
         android:label="mydemo"
         android:requestLegacyExternalStorage="true">
         <!--android:value="a2b6cdd5acc8303ac63a08a0289ff881" -->
