--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,9 @@ flutter:
   assets:
     - images/hongyu.png
     - images/arrow.png
+    - images/carNo.png
+    - images/deadWeight.png
+    - images/huoche.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
