--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ flutter:
     - images/carNo.png
     - images/deadWeight.png
     - images/huoche.png
+    - images/touxiang.png
+    - images/boy.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
