--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,9 @@ flutter:
     - images/huoche.png
     - images/touxiang.png
     - images/boy.png
+    - images/hh.jpg
+    - images/bg1.jpg
+    - images/guide.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
