--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,8 +77,7 @@ flutter:
     - images/huoche.png
     - images/touxiang.png
     - images/boy.png
-    - images/hh.jpg
-    - images/bg1.jpg
+    - images/ss.png
     - images/guide.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
